# e-ink-dashboard

./: .gitignore  README.md  TODO  app.py  generate_routes.py  image_x_.avif  input.css  main.py  output.txt  pyproject.toml  routes.py
assets/css/: output.css
e-ink-frontend/: db.sqlite3  input.css  manage.py  tw-animate.css
e-ink-frontend/display/: views.py
e-ink-frontend/display/templates/display/: index.html
e-ink-frontend/eink/: asgi.py  settings.py  urls.py  wsgi.py
e-ink-frontend/fonts/: bitfonts.css
fonts/: bitfonts.css
image-processing/: app.py  generate_routes.py  old.py  output.txt  routes.py
static/css/: output.css
static/fonts/magic/: please read - lisence.txt
