[project]
name = "e-ink-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2",
    "django-cotton>=2.6.0",
    "django-tailwind-cli>=4.5.1",
    "flask>=3.1.2",
    "ipython>=9.8.0",
    "numpy>=2.4.1",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    "requests>=2.32.5",
    "selenium>=4.39.0",
]
