[project]
name = "e-ink-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django==5.2",
    "django-cotton>=2.6.0",
    "django-tailwind-cli>=4.5.1",
    "fitz>=0.0.1.dev2",
    "flask>=3.1.2",
    "icalevents>=0.3.1",
    "ipython>=9.8.0",
    "numpy>=2.4.1",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    "pymupdf>=1.27.1",
    "requests>=2.32.5",
    "selenium>=4.39.0",
]
